# tor

./: .envrc  .flutter-plugins-dependencies  .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  flake.nix  flutter_rust_bridge.yaml  justfile  pubspec.yaml
.github/workflows/: check.yml
.reuse/: dep5
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/: .gitignore  build_pod.sh  run_build_tool.sh
cargokit/.github/workflows/: check_and_lint.yml  test_example_plugin_build.yml
cargokit/build_tool/: README.md  analysis_options.yaml  pubspec.yaml
cargokit/build_tool/lib/: build_tool.dart
cargokit/build_tool/lib/src/: android_environment.dart  artifacts_provider.dart  build_cmake.dart  build_gradle.dart  build_pod.dart  build_tool.dart  builder.dart  cargo.dart  crate_hash.dart  environment.dart  logging.dart  options.dart  precompile_binaries.dart  rustup.dart  target.dart  util.dart  verify_binaries.dart
cargokit/build_tool/test/: builder_test.dart  cargo_test.dart  options_test.dart
cargokit/cmake/: cargokit.cmake  resolve_symlinks.ps1
cargokit/docs/: architecture.md  precompiled_binaries.md
cargokit/gradle/: plugin.gradle
example/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
example/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/res/values-night/: styles.xml
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: .gitignore
example/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  socks_socket.dart
example/linux/: .gitignore  CMakeLists.txt  main.cc  my_application.cc  my_application.h
example/linux/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  generated_plugins.cmake
example/macos/: .gitignore
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: AppDelegate.swift  MainFlutterWindow.swift
example/macos/Runner.xcodeproj/: project.pbxproj  project.pbxproj.license
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/windows/: .gitignore  CMakeLists.txt
example/windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugin_registrant.h  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  utils.cpp  utils.h  win32_window.cpp  win32_window.h
ios/: Podfile  flutter_libtor.podspec  rust_lib_tor.podspec  tor.podspec  tor_ffi_plugin.podspec
ios/Classes/: Libtor.swift  LibtorPlugin.h  LibtorPlugin.m  SwiftLibtorPlugin.swift  tor.c  tor_ffi_plugin.c
lib/: flutter_libtor.dart  flutter_libtor_bindings_generated.dart  generated_bindings.dart  socks_socket.dart  tor.dart  tor_bindings_generated.dart  tor_ffi_plugin.dart  util.dart
lib/models/: tor_config.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: tor.dart  tor.freezed.dart
linux/: CMakeLists.txt  flutter_libtor_plugin.cc  tor_plugin.cc
linux/include/flutter_libtor/: flutter_libtor_plugin.h
linux/include/tor/: tor_plugin.h
macos/: Podfile  flutter_libtor.podspec  rust_lib_backup.podspec.license  rust_lib_tor.podspec  tor.podspec  tor_ffi_plugin.podspec
macos/Classes/: dummy_file.c  flutter_libtor.c  tor.c  tor_ffi_plugin.c
native/tor-ffi/: Cargo.toml  build.rs
native/tor-ffi/src/: main.rs
rust/: Cargo.toml  build.rs  rust-toolchain
rust/src/: error.rs  frb_generated.rs  lib.rs  lib.rs.license  util.rs
rust/src/api/: mod.rs  tor.rs
rust_builder/: .gitignore  README.md  pubspec.yaml
rust_builder/android/: build.gradle
rust_builder/ios/: rust_lib_tor.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_tor.podspec
rust_builder/windows/: .gitignore  CMakeLists.txt
scripts/android/: build_all.sh  config.sh  install_ndk.sh
scripts/ios/: build_all.sh
scripts/linux/: build_all.sh
scripts/macos/: build_all.sh
scripts/windows/: README.md  build_all.ps1  build_all.sh
src/: CMakeLists.txt  flutter_libtor.c  tor.c
windows/: .gitignore  CMakeLists.txt
(+10 files in other folders)
