# SPDX-FileCopyrightText: 2024 Foundation Devices Inc.
#
# SPDX-License-Identifier: MIT

[package]
name = "rust_lib_tor"
version = "0.2.0"
authors = ["Igor Cota <igor@foundation.xyz>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
arti-client = { version = "0.36.0", features = ["static", "onion-service-client"] }
arti = { version = "1.7.0", features = ["experimental-api", "static"] }
tor-rtcompat = { version = "0.36.0", features = ["static"] }
tor-config = "0.36.0"
log = "0.4.20"
rlimit = "0.10.1"
anyhow = "1.0.79"
time = "0.3.36"
thiserror = "1.0"

[target.'cfg(target_os = "ios")'.dependencies]
# Specific version for iOS
security-framework = "=2.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
